--- a/APM/app/home/welcome.component.html
+++ b/APM/app/home/welcome.component.html
@@ -1,21 +1,29 @@
-﻿<div class="panel panel-primary">
-    <div class="panel-heading">
-        {{pageTitle}}
+﻿<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
     </div>
-    <div class="panel-body"  >
-        <div class="row" >
-            <img src="./app/assets/images/logo.jpg" 
-                 class="img-responsive center-block"
-                 style="max-height:300px;padding-bottom:50px"/>
-        </div>
-        <div class="row"  >
-            <div class="text-center">Developed by:</div>
-            <h3 class="text-center">Deborah Kurata</h3>
-
-            <div class="text-center">@deborahkurata</div>
-            <div class="text-center">
-                <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
-            </div>
-        </div>
+    <div class="row">
+        <div class="col-md-8">.col-md-8</div>
+        <div class="col-md-4">.col-md-4</div>
     </div>
+    <div class="row">
+        <div class="col-md-4">.col-md-4</div>
+        <div class="col-md-4">.col-md-4</div>
+        <div class="col-md-4">.col-md-4</div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">.col-md-6</div>
+        <div class="col-md-6">.col-md-6</div>
+    </div> 
 </div>
