Input Forms - Half way

--- a/APM/app/shared/header/header.component.html
+++ b/APM/app/shared/header/header.component.html
@@ -5,6 +5,7 @@
             <ul class='nav navbar-nav'>
                 <li><a [routerLink]="['/Welcome']">Home</a></li>
                 <li><a [routerLink]="['/PatientInfo']">Patient Info</a></li>
+                <li><a [routerLink]="['/OnlinePatientEntry']">Online Patient Entry</a></li>
             </ul>
         </div>
     </nav>
