List Patient End to End

--- a/APM/app/shared/header/header.component.html
+++ b/APM/app/shared/header/header.component.html
@@ -6,6 +6,7 @@
                 <li><a [routerLink]="['/Welcome']">Home</a></li>
                 <li><a [routerLink]="['/PatientInfo']">Patient Info</a></li>
                 <li><a [routerLink]="['/OnlinePatientEntry']">Online Patient Entry</a></li>
+                <li><a [routerLink]="['/SearchViewPatList']">Search Patient</a></li>
             </ul>
         </div>
     </nav>
