--- a/APM/app/shared/header/header.component.html
+++ b/APM/app/shared/header/header.component.html
@@ -7,8 +7,9 @@
                 <li><a [routerLink]="['/PatientInfo']">Patient Info</a></li>
                 <li><a [routerLink]="['/OnlinePatientEntry']">Online Patient Entry</a></li>
                 <li><a [routerLink]="['/SearchViewPatList']">Search Patient</a></li>
+                <li><a [routerLink]="['/AddEditPatient']">Add/Edit Patient</a></li>
             </ul>
         </div>
     </nav>
-    
+
 </div>
